--- a/temp1.html
+++ b/temp1.html
@@ -34,6 +34,7 @@
         </div>
     </div>
 </body>
- <script src="./script.js"></script>
+ <script type="module" src="script.js"></script> 
+ 
 
 </html>
